# data_structures_c

./: .gitignore  CMakeLists.txt  README.md
include/: hash_map.h  linked_list.h  logging.h  test_utils.h
src/: hash_map.c  linked_list.c
test/: hash_map_test.c  linked_list_test.c
